@@ -2973,10 +2973,7 @@ calDavCalendar.prototype = {
             httpchannel.requestMethod = "POST";
             httpchannel.setRequestHeader("Originator", this.getProperty("organizerId"), false);
             for each (var recipient in aRecipients) {
-                if (recipient.participationStatus != "NON-PARTICIPANT") {
-                    httpchannel.setRequestHeader("Recipient", recipient.id, true);
-                    httpchannel.setRequestHeader("Recipient", recipient.id, true);
-                }
+                httpchannel.setRequestHeader("Recipient", recipient.id, true);
             }
 
             var thisCalendar = this;
